Add repository links

--- a/index.html
+++ b/index.html
@@ -77,104 +77,107 @@
 
 <body>
 
+<div class="container">
 
-<table>
+<table style="width: 100%">
   <tr>
     <td>7th Legion</td>
-    <td>iiEighthSolitude</td>
+    <td><a href="https://github.com/btigi/iiEighthSolitude">iiEighthSolitude</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Aethra Chronicles</td>
-    <td>iiAethra</td>
+    <td><a href="https://github.com/btigi/iiAethra">iiAethra</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Ascendancy</td>
-    <td>iiAscendancyLib</td>
+    <td><a href="https://github.com/btigi/iiAscendancyLib">iiAscendancyLib</a></td>
     <td>Yes</td>
   <tr>
   <tr>
     <td>Baldur's Gate</td>
-    <td>iiInfinityEngine</td>
+    <td><a href="https://github.com/btigi/iiInfinityEngine">iiInfinityEngine</a></td>
     <td>Yes</td>
   <tr>
   <tr>
     <td>Dark Colony</td>
-    <td>iiLightSettlement</td>
+    <td><a href="https://github.com/btigi/iiLightSettlement">iiLightSettlement</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Dark Reign: The Future of War</td>
-    <td>iiBrightRespite</td>
+    <td><a href="https://github.com/btigi/iiBrightRespite">iiBrightRespite</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Dawn of War</td>
-    <td>iiEveOfPeace</td>
+    <td><a href="https://github.com/btigi/iiEveOfPeace">iiEveOfPeace</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Dominion: Storm Over Gift 3</td>
-    <td>iiCalmForfeit</td>
+    <td><a href="https://github.com/btigi/iiCalmForfeit">iiCalmForfeit</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Dragon Age</td>
-    <td>iiFlyingLizard</td>
+    <td><a href="https://github.com/btigi/iiFlyingLizard">iiFlyingLizard</a></td>
     <td>Yes</td>
   <tr>
   <tr>
-    <td>DragonShard</td>
-    <td>iiDragonPiece</td>
+    <td>Dragonshard</td>
+    <td><a href="https://github.com/btigi/iiDragonPiece">iiDragonPiece</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Final Conflict</td>
-    <td>iiFirstPeace</td>
+    <td><a href="https://github.com/btigi/iiFirstPeace">iiFirstPeace</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Lionheart: Legacy of the Crusader</td>
-    <td>iiMouseMind</td>
+    <td><a href="https://github.com/btigi/iiMouseMind">iiMouseMind</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>M.A.X.</td>
-    <td>iiMin</td>
+    <td><a href="https://github.com/btigi/iiMin">iiMin</a></td>
     <td>No</td>
   <tr>
   <tr>
-    <td>Robin Hood: The Legend of Sherwood/td>
-    <td>iiRobertHat</td>
+    <td>Robin Hood: The Legend of Sherwood</td>
+    <td><a href="https://github.com/btigi/iiRobertHat">iiRobertHat</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Solar Winds</td>
-    <td>iiLunarTides</td>
+    <td><a href="https://github.com/btigi/iiLunarTides">iiLunarTides</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Submarine Titans</td>
-    <td>iiAirplaneDwarf</td>
+    <td><a href="https://github.com/btigi/iiAirplaneDwarf">iiAirplaneDwarf<a/></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Total Annihilation</td>
-    <td>iiCompleteDestruction</td>
+    <td><a href="https://github.com/btigi/iiCompleteDestruction">iiCompleteDestruction</a></td>
     <td>Yes</td>
   <tr>
   <tr>
     <td>Universe at War: Earth Assault</td>
-    <td>iiUniverseAtPeace</td>
+    <td><a href="https://github.com/btigi/iiUniverseAtPeace">iiUniverseAtPeace</a></td>
     <td>No</td>
   <tr>
   <tr>
     <td>Warlords Battlecry</td>
-    <td>iiHarmonyWhisper</td>
+    <td><a href="https://github.com/btigi/iiHarmonyWhisper">iiHarmonyWhisper</a></td>
     <td>No</td>
   <tr>
 </table>
+
+</div>
 
 </body>
 
