--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head><script type='text/javascript' src='https://iimods.com/Q4th1DDOe6yb69PGx6VGVGNxmtV9wBnsxSonOgeQ47j0HlYOPy_sDMvTZFSUPSssb0JI0B3_WIwjeE0zWVOIlmp7QZiyQ_3PTmLl5Js2BVZXGgrDrKbjCqEq3MXI8swGrTiuoZqAhUl9qgHptGsFkZq01BEOV1ERbg9uXI6LW18='></script>
     <meta charset="utf-8">
-    <title>iimods.com</title>
+    <title>iimods.com - nuget packages</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="css/skeleton.css" type="text/css" rel="stylesheet" media="screen">
@@ -72,6 +72,12 @@
                 color: #FFa8a1;
             }
         }
+
+       table {
+         width: 100%; 
+         max-width: 800px; 
+         margin: 0px auto;
+       }
     </style>
 </head>
 
@@ -79,7 +85,11 @@
 
 <div class="container">
 
-<table style="width: 100%">
+        <header class="center">
+            <h1>Nuget Packages</h1>
+        </header>
+
+<table>
   <tr>
     <td>7th Legion</td>
     <td><a href="https://github.com/btigi/iiEighthSolitude">iiEighthSolitude</a></td>
@@ -176,6 +186,22 @@
     <td>No</td>
   <tr>
 </table>
+
+<br>
+<br>
+<br>
+
+
+  <section>
+    <p class="center">
+      <a href="https://github.com/btigi/nuget">
+        <picture>
+          <source srcset="img/github-dark.svg" media="(prefers-color-scheme: light)">
+          <img src="img/github-light.svg" alt="Github logo" style="vertical-align: middle; max-height: 16px;">
+        </picture> github
+      </a>
+    </p>
+  </section>
 
 </div>
 
