--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <tr>
     <td>Aethra Chronicles</td>
     <td><a href="https://github.com/btigi/iiAethra">iiAethra</a></td>
-    <td>No</td>
+    <td>Yes</td>
   <tr>
   <tr>
     <td>Ascendancy</td>
@@ -118,7 +118,7 @@
   <tr>
     <td>Dark Reign: The Future of War</td>
     <td><a href="https://github.com/btigi/iiBrightRespite">iiBrightRespite</a></td>
-    <td>No</td>
+    <td>Yes</td>
   <tr>
   <tr>
     <td>Dawn of War</td>
@@ -133,7 +133,7 @@
   <tr>
     <td>Dragon Age</td>
     <td><a href="https://github.com/btigi/iiFlyingLizard">iiFlyingLizard</a></td>
-    <td>Yes</td>
+    <td>No</td>
   <tr>
   <tr>
     <td>Dragonshard</td>
@@ -172,6 +172,11 @@
   <tr>
   <tr>
     <td>Total Annihilation</td>
+    <td><a href="https://github.com/btigi/iiCompleteDestruction">iiCompleteDestruction</a></td>
+    <td>Yes</td>
+  <tr>
+  <tr>
+    <td>Total Annihilation: Kingdoms</td>
     <td><a href="https://github.com/btigi/iiCompleteDestruction">iiCompleteDestruction</a></td>
     <td>Yes</td>
   <tr>
