Add nuget links

--- a/index.html
+++ b/index.html
@@ -90,106 +90,113 @@
         </header>
 
 <table>
+  <thead>
+    <tr>
+      <td>Game</td>
+      <td>Github</td>
+      <td>Nuget</td>
+    </tr>
+  </thead>
   <tr>
     <td>7th Legion</td>
     <td><a href="https://github.com/btigi/iiEighthSolitude">iiEighthSolitude</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Aethra Chronicles</td>
     <td><a href="https://github.com/btigi/iiAethra">iiAethra</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.Aethra">Yes</a></td>
+  </tr>
   <tr>
     <td>Ascendancy</td>
     <td><a href="https://github.com/btigi/iiAscendancyLib">iiAscendancyLib</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.AscendancyLib">Yes</a></td>
+  </tr>
   <tr>
     <td>Baldur's Gate</td>
     <td><a href="https://github.com/btigi/iiInfinityEngine">iiInfinityEngine</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.InfinityEngine">Yes</a></td>
+  </tr>
   <tr>
     <td>Dark Colony</td>
     <td><a href="https://github.com/btigi/iiLightSettlement">iiLightSettlement</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Dark Reign: The Future of War</td>
     <td><a href="https://github.com/btigi/iiBrightRespite">iiBrightRespite</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.BrightRespite">Yes</a></td>
+  </tr>
   <tr>
     <td>Dawn of War</td>
     <td><a href="https://github.com/btigi/iiEveOfPeace">iiEveOfPeace</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Dominion: Storm Over Gift 3</td>
     <td><a href="https://github.com/btigi/iiCalmForfeit">iiCalmForfeit</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Dragon Age</td>
     <td><a href="https://github.com/btigi/iiFlyingLizard">iiFlyingLizard</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Dragonshard</td>
     <td><a href="https://github.com/btigi/iiDragonPiece">iiDragonPiece</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Final Conflict</td>
     <td><a href="https://github.com/btigi/iiFirstPeace">iiFirstPeace</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Lionheart: Legacy of the Crusader</td>
     <td><a href="https://github.com/btigi/iiMouseMind">iiMouseMind</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>M.A.X.</td>
     <td><a href="https://github.com/btigi/iiMin">iiMin</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Robin Hood: The Legend of Sherwood</td>
     <td><a href="https://github.com/btigi/iiRobertHat">iiRobertHat</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Solar Winds</td>
     <td><a href="https://github.com/btigi/iiLunarTides">iiLunarTides</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Submarine Titans</td>
     <td><a href="https://github.com/btigi/iiAirplaneDwarf">iiAirplaneDwarf<a/></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Total Annihilation</td>
     <td><a href="https://github.com/btigi/iiCompleteDestruction">iiCompleteDestruction</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.CompleteDestruction">Yes</a></td>
+  </tr>
   <tr>
     <td>Total Annihilation: Kingdoms</td>
     <td><a href="https://github.com/btigi/iiCompleteDestruction">iiCompleteDestruction</a></td>
-    <td>Yes</td>
-  <tr>
+    <td><a href="https://www.nuget.org/packages/ii.CompleteDestruction">Yes</a></td>
+  </tr>
   <tr>
     <td>Universe at War: Earth Assault</td>
     <td><a href="https://github.com/btigi/iiUniverseAtPeace">iiUniverseAtPeace</a></td>
     <td>No</td>
-  <tr>
+  </tr>
   <tr>
     <td>Warlords Battlecry</td>
     <td><a href="https://github.com/btigi/iiHarmonyWhisper">iiHarmonyWhisper</a></td>
     <td>No</td>
-  <tr>
+  </tr>
 </table>
 
 <br>
