--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
     <td>No</td>
   </tr>
   <tr>
+    <td>Descent</td>
+    <td><a href="https://github.com/btigi/iiAscend">iiAscend</a></td>
+    <td>No</td>
+  </tr>
+  <tr>
     <td>Dominion: Storm Over Gift 3</td>
     <td><a href="https://github.com/btigi/iiCalmForfeit">iiCalmForfeit</a></td>
     <td>No</td>
