Add Descent nuget package

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <tr>
     <td>Descent</td>
     <td><a href="https://github.com/btigi/iiAscend">iiAscend</a></td>
-    <td>No</td>
+    <td><a href="https://www.nuget.org/packages/ii.Ascend">Yes</a></td>
   </tr>
   <tr>
     <td>Dominion: Storm Over Gift 3</td>
