--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
     <td><a href="https://www.nuget.org/packages/ii.Ascend">Yes</a></td>
   </tr>
   <tr>
+    <td>Descent 2</td>
+    <td><a href="https://github.com/btigi/iiAscend">iiAscend</a></td>
+    <td><a href="https://www.nuget.org/packages/ii.Ascend">Yes</a></td>
+  </tr>
+  <tr>
     <td>Dominion: Storm Over Gift 3</td>
     <td><a href="https://github.com/btigi/iiCalmForfeit">iiCalmForfeit</a></td>
     <td>No</td>
